Spacing issues fixed

--- a/frontend/styles/global.scss
+++ b/frontend/styles/global.scss
@@ -213,7 +213,7 @@
             background: rgba($color-primary-dark, 1);
             h2 {
               position: absolute;
-              top: 10%;
+              top: 7rem;
               left: 50%;
               transform: translate(-50%, -50%);
             }
@@ -225,13 +225,13 @@
             border-left: 1px solid rgba($color-primary-light, 0.74);
               h2 {
                 position: absolute;
-                top: 10%;
+                top: 7rem;
                 left: 50%;
                 transform: translate(-50%, -50%);
               }
             
             & h1, h2, h3, h4, h5, h6 {
-              color: rgba($color-primary-dark, 1);
+              color: rgba($color-blue-light, 1);
               }
             }
             padding: 5rem 0 0 0;
@@ -465,7 +465,7 @@
 .card {
   border-radius: .3rem .3rem 1rem .3rem;
   padding: 1.5rem 1rem;
-  margin: 2rem auto;
+  margin: 4rem auto 0;
   text-align: center;
   position: absolute;
   top: 50%;
